--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-20px); }
     }
+    .glow-btn {
+      transition: all 0.3s ease;
+    }
+    .glow-btn:hover {
+      box-shadow: 0 0 12px rgba(96, 165, 250, 0.8);
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body class="bg-blue-50 flex items-center justify-center min-h-screen p-4">
@@ -71,9 +78,17 @@
   <h1 class="text-4xl md:text-5xl font-extrabold text-blue-700 mb-4">✨ Great Job! ✨</h1>
   <img src="main.png" alt="Dancing Bear" class="rounded-lg mb-4" />
   <p class="text-blue-600 mb-6 font-semibold">You finished all 10 questions!</p>
-  <button id="restart-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-lg shadow-md transition-colors">
-    Play Again
-  </button>
+
+  <div class="flex flex-col gap-3">
+    <button id="restart-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-lg shadow-md transition-colors">
+      Play Again
+    </button>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvVF6yR1b2vLfWnTxrT7x4ee6VFRxCXlqN3c19zRwSMZ_JOA/viewform" 
+       target="_blank" 
+       class="bg-blue-300 hover:bg-blue-400 text-blue-900 font-bold py-2 px-6 rounded-lg shadow-md glow-btn transition-all inline-block">
+       📸 Submit Screenshot
+    </a>
+  </div>
 </div>
 
 <script>
@@ -176,4 +191,3 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
-
